@@ -2,4 +2,5 @@
 
 # CPS --------------------
 CPSCore > 3.28.1
+CPSUserFolder > 0.9.0
 CPSInstaller >= 0.4
