@@ -7,9 +7,9 @@ for key, value in datamodel.items():
     if value:
         mapping[key] = value
 
-result_fields = context.getDirectoryResultFields(dir.getId(),
-                                                 dir.title_field)
+result_fields = context.getDirectoryResultFields(dir.getId(), dir.title_field)
 
+aclu = context.acl_users
 return_fields = []
 sort_by = None
 sort_direction = None
@@ -26,24 +26,34 @@ for field in result_fields:
     if field.get('process'):
         process_fields[field['id']] = field['process']
 
-    call_context = kw.get('call_context')
-    mtool = context.portal_membership
-    if call_context is not None:
-        dict_roles = mtool.getMergedLocalRoles(call_context, withgroups=0)
-        search_restricted_list = dict_roles.keys()
-        mapping[dir.id_field] = search_restricted_list
-    results = dir.searchEntries(return_fields=return_fields,
-                                **mapping)
+call_context = kw.get('call_context')
+mtool = context.portal_membership
+if call_context is not None:
+    dict_roles = mtool.getMergedLocalRoles(call_context, withgroups=0)
+    search_restricted_list = dict_roles.keys()
+    mapping[dir.id_field] = search_restricted_list
+results = dir.searchEntries(return_fields=return_fields, **mapping)
 
-    #
-    # Check if there's groups with local roles
-    #
+#
+# Check if there's groups with local roles
+#
 
-    dict_roles = mtool.getMergedLocalRoles(call_context, withgroups=1)
-    groups = [x[len('group:'):] for x in dict_roles if x.startswith('group:')]
+dict_roles = mtool.getMergedLocalRoles(call_context, withgroups=1)
+groups = [x[len('group:'):] for x in dict_roles if x.startswith('group:')]
 
+# special handling of special groups to behave as the RecipientRules logic
+if "role:Authenticated" in groups and not aclu.is_role_authenticated_empty:
+    results = dir.searchEntries(return_fields=return_fields)
+    skip_groups = True
+elif "role:Anonymous" in groups and not aclu.is_role_anonymous_empty:
+    results = dir.searchEntries(return_fields=return_fields)
+    skip_groups = True
+else:
+    skip_groups = False
+
+if not skip_groups:
     for group_id  in groups:
-        group_mapping = {'groups':[group_id]}
+        group_mapping = {'groups': [group_id]}
         group_member_results = dir.searchEntries(return_fields=return_fields,
                                                  **group_mapping)
         for member in group_member_results:
